Resolve "SkillExecutor IllegalArgumentException"
Closes #2157

See merge request main/Sumatra!2235

sumatra-commit: 9e986336121347fad41c525eae9ca756a767aa34