@@ -180,8 +180,8 @@ public final class SumatraMath
 		double range = to - from;
 		double cappedValue = cap(value, from, to);
 		double rel = (cappedValue - from) / range;
-		Validate.isTrue(rel >= 0);
-		Validate.isTrue(rel <= 1);
+		Validate.isTrue(rel >= 0, () -> String.format("relative %f is out of range", rel));
+		Validate.isTrue(rel <= 1, () -> String.format("relative %f is out of range", rel));
 		return rel;
 	}
 
@@ -198,7 +198,7 @@ public final class SumatraMath
 	{
 		double min = Math.min(bound1, bound2);
 		double max = Math.max(bound1, bound2);
-		return Math.max(min, Math.min(max, value));
+		return Math.clamp(value, min, max);
 	}
 
 
@@ -214,7 +214,7 @@ public final class SumatraMath
 	{
 		int min = Math.min(bound1, bound2);
 		int max = Math.max(bound1, bound2);
-		return Math.max(min, Math.min(max, value));
+		return Math.clamp(value, min, max);
 	}
 
 
@@ -234,7 +234,7 @@ public final class SumatraMath
 		}
 		int min = Math.min(bound1, bound2);
 		int max = Math.max(bound1, bound2);
-		return Math.max(min, Math.min(max, Math.abs(value))) * Integer.signum(value);
+		return Math.clamp(Math.abs(value), min, max) * Integer.signum(value);
 	}
 
 
@@ -254,7 +254,7 @@ public final class SumatraMath
 		}
 		double min = Math.min(bound1, bound2);
 		double max = Math.max(bound1, bound2);
-		return Math.max(min, Math.min(max, Math.abs(value))) * Math.signum(value);
+		return Math.clamp(Math.abs(value), min, max) * Math.signum(value);
 	}
 
 
@@ -430,7 +430,7 @@ public final class SumatraMath
 		double m = cubeRoots.stream().filter(r -> r >= 0).findAny().orElse(0.0);
 		int sign = b1 > 0 ? 1 : -1;
 		double rRadicand = m * m + b2 * m + tmp;
-		Validate.isTrue(rRadicand >= 0);
+		Validate.isTrue(rRadicand >= 0, () -> String.format("rRadicand is negative: %f", rRadicand));
 		double r = sign * SumatraMath.sqrt(rRadicand);
 		double radicand1 = -m / 2 - b2 / 2 - r;
 		double radicand2 = -m / 2 - b2 / 2 + r;
